# dify-deepdive

./: LICENSE  README.md
traceset/: .gitignore  Makefile  README.md  __init__.py  catalog.json  conftest.py  generate_traceset.py  helpers.py  ingest.py  pipeline.py  pyproject.toml  schema.md  schema.py  validate.py
traceset/01-chat-basic/: events.jsonl  meta.json
traceset/01-linear-llm-chain/: events.jsonl  meta.json
traceset/02-chat-rag/: events.jsonl  meta.json
traceset/02-parallel-branches/: events.jsonl  meta.json
traceset/03-agent-react-loop/: events.jsonl  meta.json
traceset/03-completion-basic/: events.jsonl  meta.json
traceset/04-agent-single-tool/: events.jsonl  meta.json
traceset/04-multi-tool-chain/: events.jsonl  meta.json
traceset/05-agent-multi-tool/: events.jsonl  meta.json
traceset/05-rag-multi-hop/: events.jsonl  meta.json
traceset/06-moderation-rag-tool-combo/: events.jsonl  meta.json
traceset/06-workflow-5node/: events.jsonl  meta.json
traceset/07-workflow-15node/: events.jsonl  meta.json
traceset/07-workflow-conditional/: events.jsonl  meta.json
traceset/08-chatflow-basic/: events.jsonl  meta.json
traceset/08-error-recovery-agent/: events.jsonl  meta.json
traceset/09-moderation-blocked/: events.jsonl  meta.json
traceset/09-nested-workflow/: events.jsonl  meta.json
traceset/10-moderation-pass-through/: events.jsonl  meta.json
traceset/10-workflow-error-propagation/: events.jsonl  meta.json
traceset/11-rag-empty-results/: events.jsonl  meta.json
traceset/11-streaming-chatflow/: events.jsonl  meta.json
(+52 files in other folders)
