[project]
name = "dify-trace-catalog"
version = "0.2.0"
description = "End-to-end Dify trace generation, ingestion, and validation pipeline for Langfuse"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
    "langfuse>=4.2.0,<5.0.0",
    "pytest>=7.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
markers = [
    "e2e: end-to-end tests against real Langfuse (requires Docker)",
]
